--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "eventemitter2": "^5.0.1",
+    "lowdb": "^1.0.0",
     "mdns": "^2.5.1",
     "petwant-device": "^1.0.4",
     "socket.io": "^2.3.0"
