--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Yurii Zubkov",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "eventemitter2": "^5.0.1",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
