--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "lowdb": "^1.0.0",
     "mdns": "^2.5.1",
+    "mongodb": "~2",
     "petwant-device": "^1.0.5",
     "socket.io": "^2.3.0",
     "stream-split": "^1.1.0"
